# rpanel

./: Cargo.toml  LICENSE  README.md  demo.xml  idea.md  rpanel.xsd
docs/: MODULES.md  README.md  STRUCTURE.md
src/: main.rs  renderer.rs  utils.rs
src/backend/: mod.rs  modules.rs  xmlparser.rs
