[package]
name = "rpanel"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
parking_lot = "0.12.4"
ratatui = {version = "0.29.0", features = ["unstable-widget-ref"]}
roxmltree = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
